--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -78,3 +78,18 @@
 :root {
   font-family: "Montserrat";
 }
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+    opacity: 0.7;
+  }
+  50% {
+    transform: scale(1.08);
+    opacity: 1;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 0.7  ;
+  }
+}
