--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -90,6 +90,26 @@
   }
   100% {
     transform: scale(1);
-    opacity: 0.7  ;
+    opacity: 0.7;
+  }
+}
+
+@keyframes fade-in {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes slide-in {
+  from {
+    opacity: 0;
+    transform: translateX(-30px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0);
   }
 }
