--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -105,11 +105,11 @@
 
 @keyframes slide-in {
   from {
+    transform: scale(0.85) translateY(-20px);
     opacity: 0;
-    transform: translateX(-30px);
   }
   to {
+    transform: scale(1) translateY(0);
     opacity: 1;
-    transform: translateX(0);
   }
 }
