--- a/app/tailwind.css
+++ b/app/tailwind.css
@@ -67,7 +67,7 @@
 }
 
 :root {
-  font-family: "Montserrat";
+  font-family: "Quicksand";
   --radius: 0.625rem;
   --background: oklch(1 0 0);
   --foreground: oklch(0.145 0 0);
